// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  accessible={true}
  focusable={false}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "whitesmoke",
      "borderRadius": 20,
      "elevation": 2,
      "height": 40,
      "justifyContent": "center",
      "left": 16,
      "opacity": 1,
      "position": "absolute",
      "top": 16,
      "width": 40,
      "zIndex": 10,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 18,
        },
        undefined,
        Object {
          "fontFamily": "FontAwesome",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`renders correctly 2`] = `
<Text
  style={
    Object {
      "color": "whitesmoke",
    }
  }
>
  
</Text>
`;

exports[`renders correctly 3`] = `
<Text
  style={
    Object {
      "color": "whitesmoke",
      "flex": 1,
      "marginLeft": 10,
    }
  }
/>
`;

exports[`renders correctly 4`] = `""`;

exports[`renders correctly 5`] = `
<View
  accessible={true}
  focusable={false}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flexDirection": "row",
      "opacity": 1,
      "paddingVertical": 10,
    }
  }
>
  <Image
    source={
      Object {
        "uri": undefined,
      }
    }
    style={
      Object {
        "height": 100,
        "width": 80,
      }
    }
  />
  <View
    style={
      Object {
        "marginLeft": 10,
        "width": "70%",
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        Object {
          "color": "white",
          "fontSize": 15,
          "fontWeight": "bold",
        }
      }
    />
    <Text
      style={
        Object {
          "color": "lightgray",
        }
      }
    >
      NaN
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginTop": 5,
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "yellow",
              "fontSize": 10,
            },
            undefined,
            Object {
              "fontFamily": "FontAwesome",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
      <Text
        style={
          Object {
            "color": "white",
            "marginLeft": 5,
          }
        }
      />
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "lightgray",
              "fontSize": 10,
            },
            Object {
              "marginLeft": 8,
            },
            Object {
              "fontFamily": "FontAwesome",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
      <Text
        style={
          Object {
            "color": "white",
            "marginLeft": 5,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginTop": 10,
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#2089DC",
              "fontSize": 15,
            },
            Object {
              "marginLeft": 8,
            },
            Object {
              "fontFamily": "FontAwesome",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
      <Text
        style={
          Object {
            "color": "#2089DC",
            "fontSize": 14,
            "marginLeft": 5,
          }
        }
      >
        Invalid Date
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders correctly 6`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "whitesmoke",
      "borderRadius": 15,
      "justifyContent": "center",
      "marginTop": 8,
      "padding": 16,
      "width": "45%",
    }
  }
>
  <Image
    resizeMode="center"
    source={
      Object {
        "uri": undefined,
      }
    }
    style={
      Object {
        "flex": 1,
        "height": 100,
        "width": 80,
      }
    }
  />
  <Text
    style={
      Object {
        "fontSize": 16,
        "marginTop": 5,
        "textAlign": "center",
      }
    }
  />
</View>
`;

exports[`renders correctly 7`] = `
<View
  accessible={true}
  focusable={false}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#4285F4",
      "borderRadius": 5,
      "display": "none",
      "elevation": 1,
      "marginTop": 10,
      "opacity": 1,
      "padding": 8,
    }
  }
>
  <Text
    style={
      Object {
        "color": "white",
      }
    }
  >
    See more...
  </Text>
</View>
`;
